package com.fresno.fs;
// visitor pattern
public interface Visitor {

    public void visit(Node node) throws Exception;  // visit current node

}
