@startuml

title __FS's Class Diagram__\n

  namespace com.fresno.fs {
    interface com.fresno.fs.Builder {
        {abstract} + cdAction()
        {abstract} + createAction()
        {abstract} + delAction()
        {abstract} + exit()
        {abstract} + getRoot()
        {abstract} + lsAction()
        {abstract} + makeDirAction()
        {abstract} + reSizeAction()
        {abstract} + sizeAction()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.DelVisitor {
        {static} - delVisitor : Visitor
        {static} + getInstance()
        + visit()
        - DelVisitor()
        - delRecursive()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.ExitProxy {
        + ExitProxy()
        + ExitProxy()
        + visit()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.ExitVisitor {
        + visit()
        - delete()
        - deleteHelper()
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.FSConstant {
        {static} + INDENT : int
        {static} + ROOT_NAME : String
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FSUtils {
        {static} + getAbsolutePath()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FileSystemBuilder {
        + FileSystemBuilder()
        + cdAction()
        + createAction()
        + delAction()
        + exit()
        + getRoot()
        + lsAction()
        + makeDirAction()
        + reSizeAction()
        + sizeAction()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FileSystemClient {
        {static} + main()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FileSystemDisplay {
        {static} - fileSystemDisplay : FileSystemDisplay
        {static} + getInstance()
        + printFileSystem()
        - FileSystemDisplay()
        {static} - printHelper()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FooterTextDisplay {
        + FooterTextDisplay()
        + display()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.HeaderTextDisplay {
        + HeaderTextDisplay()
        + display()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.LsVisitor {
        {static} - lsVisitor : Visitor
        {static} + getInstance()
        + visit()
        - LsVisitor()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.Node {
        ~ children : Map<String, Node>
        ~ depth : int
        ~ fileSize : int
        ~ isFile : boolean
        ~ name : String
        ~ toBeDeleted : boolean
        + Node()
        + Node()
        + Node()
        + accept()
        + accept()
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.ReVisitor {
        {abstract} + visit()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.ResizeVisitor {
        + ResizeVisitor()
        + visit()
        - getRoot()
        - notifyDisplayTree()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.SizeVisitor {
        {static} - sizeVisitor : Visitor
        {static} + getInstance()
        + visit()
        - SizeVisitor()
        - getSize()
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.TreeDisplay {
        {abstract} + display()
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.TreeDisplayAdapter {
        + TreeDisplayAdapter()
        + display()
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.Visitor {
        {abstract} + visit()
    }
  }
  
  com.fresno.fs.FileSystemClient o-- com.fresno.fs.Builder : builder
  com.fresno.fs.DelVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.ExitProxy .up.|> com.fresno.fs.Visitor
  com.fresno.fs.ExitProxy o-- com.fresno.fs.Visitor : exitVisitor
  com.fresno.fs.ExitProxy o-- com.fresno.fs.ExitVisitor : exitVisitor
  com.fresno.fs.ExitVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.FileSystemBuilder .up.|> com.fresno.fs.Builder
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Node : curNode
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : delVisitor
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : exitProxy
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : lsVisitor
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.ReVisitor : reSizeVisitor
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Node : root
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : sizeVisitor
  com.fresno.fs.FooterTextDisplay .up.|> com.fresno.fs.TreeDisplay
  com.fresno.fs.FooterTextDisplay o-- com.fresno.fs.TreeDisplay : treeDisplay
  com.fresno.fs.HeaderTextDisplay .up.|> com.fresno.fs.TreeDisplay
  com.fresno.fs.HeaderTextDisplay o-- com.fresno.fs.TreeDisplay : treeDisplay
  com.fresno.fs.LsVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.Node o-- com.fresno.fs.Node : parent
  com.fresno.fs.ResizeVisitor .up.|> com.fresno.fs.ReVisitor
  com.fresno.fs.ResizeVisitor o-- com.fresno.fs.TreeDisplay : observer
  com.fresno.fs.SizeVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.TreeDisplayAdapter .up.|> com.fresno.fs.TreeDisplay
  com.fresno.fs.TreeDisplayAdapter o-- com.fresno.fs.FileSystemDisplay : fsDisplay


@enduml
